# modeloML-IMO

./: README.md
frontend/: index.html  package-lock.json  tailwind.config.mjs
frontend/src/: App.jsx  global.css  main.jsx
frontend/src/api/: apiFetch.js
frontend/src/components/home/: infoPanel.jsx  predictionForm.jsx  predictionResult.jsx
frontend/src/components/inputs/: formRow.jsx  inputForm.jsx  inputSelect.jsx
frontend/src/constants/: formOptions.js
frontend/src/lib/: safeAwait.js
frontend/src/pages/: home.jsx
ml_api/: Dockerfile  README.md  pyproject.toml
ml_api/src/ml_api/ai/: meu_modelo.pkl
ml_api/src/ml_api/app/: app.py  runserver.py
ml_api/src/ml_api/model/: schemas.py
ml_api/src/ml_api/routes/: model_routes.py
ml_api/src/ml_api/services/: open_model_service.py  predict_service.py  transform_input_with_one_hot_encoder.py
ml_api/tests/: test.py
